[package]
name = "concept"
version = "0.1.0"
edition = "2021"
authors = ["cactice"]

[dependencies]
enumflags2 = "0.7.3"
guppies = { path = "../guppies" }
salvage = { path = "../salvage" }
natura = { git = "https://github.com/ziyasal/natura" }

[dev-dependencies]
regex = "1"
bytemuck = "1.9.1"
fastrand = "1.8.0"
ndk-glue= "0.5"
