[package]
name = "guppies"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.28.6", features = ["android-native-activity"] }
wgpu = { version = "0.17.0", features = ["spirv"] }
pollster = "0.3"
bytemuck = { version = "1.8", features = ["derive"] }
glam = { version = "0.22.0", features = ["bytemuck"] }
log = "0.4"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.17.0", features = ["webgl", "spirv"] }
web-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0" }
