[package]
name = "guppies"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.28.7", features = ["android-native-activity"] }
wgpu = { version = "0.18.0", features = ["spirv"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
log = "0.4"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.18.0", features = ["webgl", "spirv"] }
web-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0" }
