[package]
name = "mobile-winit"
version = "0.1.0"
authors = ["cactice <14835424+Cactice@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mobile-winit-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
winit = "0.23.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "1.11.0"

[package.metadata.cargo-apple.ios]
