[package]
name = "salvage"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "geometry_bench"
harness = false

[dependencies]
usvg = { git = "https://github.com/Cactice/resvg" }
guppies = { path = "../guppies" }
bytemuck = "1.2.0"
lyon = "1.0.0"
roxmltree = "0.14.1"
xmlwriter = "0.1.0"
