[package]
name = "svg-gui-concept"
version = "0.1.0"
edition = "2021"
authors = ["cactice"]

[dependencies]
enumflags2 = "0.7.3"
glam = { version = "0.20.2", features = ["bytemuck", "approx"] }

[dev-dependencies]
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
natura = { git = "https://github.com/ziyasal/natura" }
async-std = "*"
bytemuck = "*"
