[package]
name = "svg-gui-concept"
version = "0.1.0"
edition = "2021"
authors = ["cactice"]

[dependencies]
enumflags2 = "0.7.3"
glam = { version = "0.20.2", features = ["bytemuck", "approx"] }
windowing = { path = "../windowing" }

[dev-dependencies]
regex = "1"
natura = { git = "https://github.com/ziyasal/natura" }
bytemuck = "1.9.1"


[[example]]
name = "life"
