[package]
name = "usvg-layout"
version = "0.1.0"
edition = "2021"

[dependencies]
# git clone from here https://github.com/Cactice/resvg
usvg = { git = "https://github.com/Cactice/resvg" }
tiny-skia = "0.6.1"
bytemuck = "1.2.0"
lyon = { version = "0.17.10", features = ["extra"] }
wgpu = "0.12.0"
clap = "2.32.0"
winit = "0.26"
futures = "0.3.5"
env_logger = "0.9.0"

[patch.crates-io]
usvg = { path = "./resvg/usvg" }
