[package]
name = "list"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "list"
path = "src/main.rs"

[[bin]]
name = "list"
path = "src/main.rs"

[dependencies]
mobile-entry-point = "0.1.1"
guppies = { path = "../../guppies" }
salvage = { path = "../../salvage" }
experiment = { path = "../../experiment" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
log = "0.4.11"
